# LHC-Collimation

AnalysisScripts/C/: AtlasStyle.C  AtlasUtils.C  clean_coll_summary.c  func_sim.c  func_sim.h  join_files.c  loss_map.c  make_coll_summary.c
AnalysisScripts/py/: MDAnalysis.py  MDAnalysis_dict.py  avLosses.py  bbgAnalysis.py  bg.py  calcAtomicDensities.py  checkJobs.py  collsummary.py  computeCPU.py  createTTree.py  createTTree_dict.py  cv00.py  cv01.py  cv02.py  cv03.py  cv04.py  cv05.py  cv06.py  cv07.py  cv08.py  cv09.py  cv10.py  cv11.py  cv12.py  cv13.py  cv14.py  cv16.py  cv18.py  cv19.py  cv20.py  cv21.py  cv22.py  cv23.py  cv24.py  cv25.py  cv26.py  cv27.py  cv28.py  cv29.py  cv30.py  (+80 more)
Documentation/ATS/: ATS.tex
Documentation/ATS/HLHaloBackgroundNote/: HLHaloBackgroundNote.tex  LHCbackground.tex  LHCbackgroundReport.tex  Section1.tex  Section2.tex  Section3.tex  Section4.tex  Section5.tex  Section6.tex  all-refs2.bib  appendixA.tex  appendixA2.tex  appendixB.tex  appendixC.tex  appendixC2.tex  appendixD.tex  bibliography.bib  cernatsnote.cls  cernatsreport.tex  cernlogo.eps  pictexa.tex
Documentation/ATS_notes/HLHaloBackgroundNote/: Section1.tex
Documentation/SixTrackDoc/: sixtrack.tex
FlukaRoutines/4TeV/: Makefile  linkexec.sh  mgdraw-interface-plane.f  source-forced-interactions-TCT.f  source_no_interactions_no_random_part.f  stuprf.f
FlukaRoutines/4TeV/beamgas/exec_el/: source_elastic.f
FlukaRoutines/4TeV/beamgas/exec_inel/: source_inelastic.f
FlukaRoutines/4TeV/beamgas/sourceBeamGas/: Makefile  bmagfld.ftn  mgdraw-interface-plane.f  stuprf.f
FlukaRoutines/4TeV/forExec/: include_IR1IR5.f  mgdraw-record-orbit-ascii.f  source_elastic_mod.f  source_inelastic.f
FlukaRoutines/6.5TeV/b1/: ir1_6500GeV_b1_20MeV.inp
FlukaRoutines/6.5TeV/b2/: ir1_6500GeV_b2_20MeV.inp
FlukaRoutines/6.5TeV/beamgas/sourceBG/: Makefile  bmagfld.f  mgdraw-interface-plane.f  source-forced-interactions-beam-gas-local.f  usrglo.f
FlukaRoutines/6.5TeV/exec/: COLSPE.inc  source_losses.f
FlukaRoutines/6.5TeV/withStuprf/: Makefile  bmagfld.f  mgdraw_tctscoring.f
FlukaRoutines/6.5TeV/withStuprf_corr/: bmagfld.ftn  mgdraw_tctscoring.f  usrini_losses.f
PostSixTrack/: correct_coll_summary.sh
PostSixTrack/BeamLossPattern_ascii/: .Survey.h.swp  Aperture.cpp  AssignOneMetre.h  BeamLossPattern_2005-04-26.cpp  OneMetre.h  OneMetreAlign.cpp  OneMetreAlign.h  ReadTwiss.cpp  ReadTwiss.h  Survey.cpp  makefile
PostSixTrack/BeamLossPattern_hdf5/: Aperture.h  AssignOneMetre.cpp  AssignOneMetre.h  BeamLossPattern.cpp  BeamLossPattern.kdev4  CMakeLists.txt  CleanInelastic.cpp  CountNabs.cpp  GetAperture.cpp  OneMetre.cpp  ReadTracks.cpp  ReadTracks.h  ReadTwiss.cpp  ReadTwiss.h  Survey.cpp  Survey.h  comparekLPIs.py  config.h.in  convertTracks2.py  hdtest.cpp  readme.txt
PostSixTrack/CleanCollScatter/: CleanCollScatter_2014.09.10.cpp
PostSixTrack/CleanInelastic/: CleanInelastic_2013-08-19b.cpp
PreSixTrack/py/: submitFluka_lxb.py  submitSixTrack_lxbatch.py
PreSixTrack/py/create_CollDB/: CollDB_inputs.py  coll_lists.py  create_CollDB.py  settings_by_type.4TeV.cfg  settings_by_type.6.5TeV.cfg  settings_by_type.7TeV.cfg  settings_by_type.ATS.cfg
SixTrackCode/MergeBranch/: testfile
SixTrackConfig/3.5TeV/Example/: BeamLossPattern_2005-04-30_gcc2.9  awkCollSummary.sh  fort.3
SixTrackConfig/3.5TeV/Example/b1/: CollDB_V6.503_lowb_st.b1.data
SixTrackConfig/4TeV/TCThaloStudies/b1/: fort.2
SixTrackConfig/4TeV/TCThaloStudies/b1/hHalo/: fort.3
SixTrackConfig/4TeV/TCThaloStudies/b1/pencil/: fort.3
SixTrackConfig/4TeV/TCThaloStudies/b1/vHalo/: fort.3
SixTrackConfig/4TeV/TCThaloStudies/b2/: CollDB_V6.503_lowb_st.b2.data  allapert.b2  fort.2  twiss_b4.data.thin
SixTrackConfig/4TeV/TCThaloStudies/b2/hHalo/: fort.3.TCLAsIN  fort.3.TCLAsOUT
SixTrackConfig/4TeV/TCThaloStudies/b2/pencil/: fort.3
SixTrackConfig/4TeV/TCThaloStudies/b2/vHalo/: fort.3
SixTrackConfig/4TeV/beamgas/: twiss_4tev_b1.data  twiss_b4.data.thin
SixTrackConfig/6.5TeV/MED400/B1/: CollDB_V6.503_lowb_st.b1.data  fort.3  job_make_optics_thin_ric.madx  opt_400_10000_400_3000_v2_thin.madx  tcl.ats.madx
SixTrackConfig/6.5TeV/MED400/B2/: CollDB_V6.503_lowb_st.b2.data  job_make_optics_thin_ric.madx  tcdq_ir6_2012.thin.madx  tctv.madx
SixTrackConfig/6.5TeV/MED800/B1/: fort.2  fort.3  job_make_optics_thin_ric.madx  opt_800_10000_800_3000_thin.madx
SixTrackConfig/6.5TeV/MED800/B1/hHalo/: fort.3
SixTrackConfig/6.5TeV/MED800/B1/vHalo/: fort.3
SixTrackConfig/6.5TeV/MED800/B2/: CollDB_V6.503_lowb_st.b2.data  fort.2  job_make_optics_thin_ric.madx
SixTrackConfig/6.5TeV/MED800/B2/1cm/: job_make_optics_thin_1cm.madx
SixTrackConfig/6.5TeV/MED800/B2/hHalo/: fort.3
SixTrackConfig/6.5TeV/MED800/B2/pencil/: fort.3
SixTrackConfig/6.5TeV/MED800/B2/vHalo/: fort.3
SixTrackConfig/6.5TeV/background_2015_80cm/: main_job.madx
SixTrackConfig/6.5TeV/background_2015_80cm/MADX_2015/: job_sample_thickthin.madx  twiss_b2.tfs
SixTrackConfig/7TeV/designLHC/postLS1scan/b1/: CollDB_V6.503_lowb_st.b1.data  CollDB_V6.503_lowb_st.b1.data.TCSG.4R6.B1  fort.2  (+15 more)
SixTrackConfig/common/: CleanInelastic  CleanInelastic_2013-08-19  correct_coll_summary.sh
(+65 files in other folders)
